FIX Floating problem on author info made the post look funky on iPhone.

--- a/_src/styles/modules/content.scss
+++ b/_src/styles/modules/content.scss
@@ -21,7 +21,7 @@
     }
 
     // only one column in small screens
-    @media (max-width: $screen-sm-max) {
+    @media (max-width: $screen-md-max) {
         clear: both;
     }
 }
