--- a/_src/styles/modules/meta.scss
+++ b/_src/styles/modules/meta.scss
@@ -31,12 +31,14 @@
 
         .profile-image {
             float: left;
+	    margin-right: 1em;
+	    margin-bottom: 1em;
         }
 
         .author-info {
-            width: 100%;
-            margin-left: 140px;
             padding-top: 1em;
+	    display: block;
+	    float: left;
         }
 
         .author-name {
